--- a/website-creator.html
+++ b/website-creator.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>html() and val() Madlib</title>
+  <title>Website Generator</title>
   <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
   <script>
     $(function(){
