--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
   <h1></h1>
   <h2></h2>
   
-  Welcome to WEBSITE GENERATOR! Simply answer the following questions andyou will get your own... WEBSITE!<br>
+  Welcome to WEBSITE GENERATOR! Simply answer the following questions and you will get your own... WEBSITE!<br>
   What is your name? <input id="name"><br>
   What is your age? <input id="age"><br>
-  What is your favorite Color? <input id="color"><br>
+  What is your favorite color? <input id="color"><br>
   What are your favorite hobby? <input id="hobbies"><br>
   What is your favorite subject? <input id="subject"><br>
   Double click the button to generate your project!<br>
